# mezo-analytics

./: .gitignore  Makefile  README.md  process_fees.py  pyproject.toml  requirements.txt
.github/: README.md  dependabot.yml
.github/workflows/: data-processing.yml  dependency-check.yml  generate-summary-reports.yml  manual-data-processing.yml  update-requirements.yml
data/processed/: 2025-06-02_autobridge_summary.csv  (+3 more)
docs/: mkdocs.yml
mezo/: __init__.py  clients.py  currency_config.py  currency_utils.py  data_utils.py  datetime_utils.py  musd_config.py  queries.py  report_utils.py  subgraph_config.py  test_utils.py  visual_utils.py
notebooks/: bridges.ipynb  musd-notebook.ipynb  musd_market_scratch.ipynb  musd_price_data_exploration.py  musd_price_monitor.py  pools-01-09_2025.ipynb  pools-02-09_2025.ipynb  pools.ipynb  pools_scratchpad.py  pricing_data.py  swap_scratch.py  swaps.ipynb  uwi.ipynb  vaults_work.ipynb
reports/: generate_summary_reports.py
scripts/: __init__.py  bridge_extended_fcn_experiment.py  fetch_market_transactions.py  fetch_mezo_users.py  get_raw_data.py  process_autobridge_data.py  process_bridge_data.py  process_dapp_data.py  process_fees.py  process_lolli_data.py  process_market_data.py  process_musd_data.py  process_pools_data.py  process_swaps_data.py  process_token_registrations.py  process_vaults_data.py  process_vote_data.py  refactor_pools_data.py  update_dependencies.py  update_requirements.py
tests/: bridge_data_tests.py  bridge_data_tests_v2.py  fix_bridge_data_columns.py  liquidation_data_troubleshooting.py  test_all_generic_functions.py  test_bridge_transactions.py  test_dynamic_table_creation.py  test_pools_edge_cases.py  test_process_bridge_data.py  test_refactor_pools_data.py  test_refactored_functions.py
(+27 files in other folders)
